[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Boss Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://bossImageScripts/BimmyFacesBoss.png" type="Texture" id=2]
[ext_resource path="res://Scripts/DialogueScene.gd" type="Script" id=4]

[node name="DialogueScene" type="Node2D"]
script = ExtResource( 4 )

[node name="Boss Background" parent="." instance=ExtResource( 1 )]

[node name="DialogueBox" type="Polygon2D" parent="."]
color = Color( 0.180392, 0.180392, 0.180392, 1 )
polygon = PoolVector2Array( 16, 400, 16, 496, 1008, 496, 1008, 400 )

[node name="Dialogue" type="RichTextLabel" parent="DialogueBox"]
margin_left = 32.0
margin_top = 416.0
margin_right = 992.0
margin_bottom = 480.0
bbcode_enabled = true
text = "Bimmy: You're gonna have a bad time."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boss Picture" type="TextureRect" parent="."]
margin_left = 38.0
margin_top = 224.0
margin_right = 198.0
margin_bottom = 384.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boss Image" type="TextureRect" parent="."]
margin_left = 827.0
margin_top = 16.0
margin_right = 987.0
margin_bottom = 176.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
